--- a/package.json
+++ b/package.json
@@ -18,6 +18,12 @@
     "astro": "^3.0.13",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "tailwindcss": "^3.0.24"
+    "tailwindcss": "^3.0.24",
+    "zod": "^3.22.2"
+  },
+  "devDependencies": {
+    "bun-types": "^1.0.1",
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.0"
   }
 }
