--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "zod": "^3.22.2"
   },
   "devDependencies": {
+    "@types/node": "^20.6.0",
     "bun-types": "^1.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0"
