--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^3.0.13",
+    "octokit": "^3.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwindcss": "^3.0.24",
@@ -25,6 +26,7 @@
     "@types/node": "^20.6.0",
     "bun-types": "^1.0.1",
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.0"
+    "prettier-plugin-astro": "^0.12.0",
+    "vitest": "^0.34.4"
   }
 }
