--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@astrojs/netlify": "^3.0.1",
     "@astrojs/react": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "astro": "^3.0.13",
@@ -20,6 +21,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.277.0",
     "octokit": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^1.14.0",
