--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/react": "^3.0.2",
     "@astrojs/tailwind": "^5.0.0",
     "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/react": "^18.0.21",
@@ -23,7 +24,6 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.277.0",
     "octokit": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "tailwind-merge": "^1.14.0",
@@ -36,6 +36,7 @@
     "bun-types": "^1.0.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
+    "prettier-plugin-tailwindcss": "^0.5.4",
     "vitest": "^0.34.4"
   }
 }
